# scanorm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scanorm/: apps.py  inspector.py
tests/: test_inspector.py
tests/blog/article/: models.py
tests/blog/blog/: settings.py
