[tool.poetry]
name = "scanorm"
version = "0.1.0"
description = ""
authors = ["le_woudar <kevin.tewouda@gandi.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
