[tool.poetry]
name = "scanorm"
version = "0.1.0"
description = ""
authors = ["le_woudar <rollandkev@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
bandit = "^1.7.4"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scanorm --cov-report html --cov-report xml"
DJANGO_SETTINGS_MODULE = "tests.blog.blog.settings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
